admin bug fixed, parallax adjustment, z-indexes

--- a/client/stylesheets/slides/evolution.css
+++ b/client/stylesheets/slides/evolution.css
@@ -62,6 +62,7 @@ div.swiper-pagination-h {
   padding: 0;
   list-style: none;
   text-align: center;
+  z-index: 999;
 }
 
 span.swiper-pagination-bullet {
